--- a/demo/index.html
+++ b/demo/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>React Easy Datepicker</h1>
-  <p>A barebones, no-frills, easy datepicker with react.  With minimal styles, small configuration and tiny dependencies.</p>
+  <h1>React Basic Datepicker</h1>
+  <p>A barebones, no-frills, basic datepicker with react.  With minimal styles, small configuration and tiny dependencies.</p>
   <div id="react-root"></div>
   <script src="js/bundle.js"></script>
 </body>
