Fix issue with safari

--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,6 @@
   <h1>React Basic Datepicker</h1>
   <p>A barebones, no-frills, basic datepicker with react.  With minimal styles, small configuration and tiny dependencies.</p>
   <div id="react-root"></div>
-  <script src="dist/bundle.js"></script>
+  <script src="../dist/bundle.js"></script>
 </body>
 </html>
