--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,10 @@
   <h1>React Basic Datepicker</h1>
   <p>A barebones, no-frills, basic datepicker with react.  With minimal styles, small configuration and tiny dependencies.</p>
   <div id="react-root"></div>
-  <script src="../dist/bundle.js"></script>
+  <div class="info">
+    <small>Built by <a href="https://twitter.com/chrisborrowdale">@chrisborrowdale</a>, come and say hi 👋🏻</small>
+    <a href="https://borrowdale.co" target="_blank" class="site">borrowdale.co</a>
+  </div>
+  <script src="app.bundle.js"></script>
 </body>
 </html>
