--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,6 @@
     <small>Built by <a href="https://twitter.com/chrisborrowdale">@chrisborrowdale</a>, come and say hi 👋🏻</small>
     <a href="https://borrowdale.co" target="_blank" class="site">borrowdale.co</a>
   </div>
-  <script src="app.bundle.js"></script>
+  <script src="dist/app.bundle.js"></script>
 </body>
 </html>
