Add link to the project readme from the demo page 😎

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>React Basic Datepicker</h1>
   <p>A barebones, no-frills, basic datepicker with react.  With minimal styles, small configuration and tiny dependencies.</p>
+  <p style="font-size: 14px">You can <a href="https://github.com/chrisborrowdale/react-basic-datepicker">check out the docs</a> for more information.</p>
   <div id="react-root"></div>
   <div class="info">
     <small>Built by <a href="https://twitter.com/chrisborrowdale">@chrisborrowdale</a>, come and say hi 👋🏻</small>
